added Radial progress section

--- a/index.html
+++ b/index.html
@@ -103,7 +103,53 @@
 
     </header>
     <main>
-
+        <section class="mt-20">
+            <div class="text-center space-y-4">
+                <h3 class="text-4xl font-extrabold text-[#131318]">Professional Hockeys Club</h3>
+                <p class="text-base font-medium text-[#13131899]">The Hockey’s is a powerhouse in professional hockey,
+                    boasting a rich history of championship victories and a passionate fan base</p>
+            </div>
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-5 my-14 space-y-3">
+                <div class="text-center">
+                    <div class="radial-progress text-[#4C8DF1]" style="--value:98;" role="progressbar">98%</div>
+                    <div class="mt-5">
+                        <h4 class="text-xl font-semibold text-[#131318]">Prayer Facility</h4>
+                        <p class="text-base font-normal">Our prayer facility provides a tranquil space for individuals
+                            to connect with their spirituality
+                        </p>
+                    </div>
+                </div>
+                <div class="text-center">
+                    <div class="radial-progress text-[#FF4240]" style="--value:70;" role="progressbar">70%</div>
+                    <div class="mt-5">
+                        <h4 class="text-xl font-semibold text-[#131318]">Experienced Coach</h4>
+                        <p class="text-base font-normal">
+                            With a wealth of experience and a proven track record, our coach brings invaluable expertise
+                            to guide and elevate athletes,  teamwork, and success.</p>
+                    </div>
+                </div>
+                <div class="text-center">
+                    <div class="radial-progress text-[#49D293]" style="--value:70;" role="progressbar">60%</div>
+                    <div class="mt-5">
+                        <h4 class="text-xl font-semibold text-[#131318]">Training Ground</h4>
+                        <p class="text-base font-normal">Our state-of-the-art training ground provides a dynamic and
+                            conducive environment for athletes to hone their skills.
+                        </p>
+                    </div>
+                </div>
+                <div class="text-center">
+                    <div class="radial-progress text-[#FFB546]" style="--value:90;" role="progressbar">90%</div>
+                    <div class="mt-5">
+                        <h4 class="text-xl font-semibold text-[#131318]">Senior Player</h4>
+                        <p class="text-base font-normal">
+                            As a seasoned veteran on the field, our senior player embodies leadership, skill, and a
+                            wealth
+                            of experience.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
