added program section

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
     </header>
     <main>
-        <section class="mt-20">
+        <section class="mt-20 mx-5">
             <div class="text-center space-y-4">
                 <h3 class="text-4xl font-extrabold text-[#131318]">Professional Hockeys Club</h3>
                 <p class="text-base font-medium text-[#13131899]">The Hockey’s is a powerhouse in professional hockey,
@@ -125,7 +125,7 @@
                         <h4 class="text-xl font-semibold text-[#131318]">Experienced Coach</h4>
                         <p class="text-base font-normal">
                             With a wealth of experience and a proven track record, our coach brings invaluable expertise
-                            to guide and elevate athletes,  teamwork, and success.</p>
+                            to guide and elevate athletes, teamwork, and success.</p>
                     </div>
                 </div>
                 <div class="text-center">
@@ -150,6 +150,44 @@
                 </div>
             </div>
         </section>
+        <section class="mt-20 mx-5">
+            <div class="text-center space-y-4 mx-3 lg:mx-10">
+                <h3 class="text-4xl font-extrabold text-[#131318]">Program Sections</h3>
+                <p class="text-base font-medium text-[#13131899]">Engage participants with a comprehensive introduction
+                    to the program, setting the tone for the day's activities. Followed by a thorough warm-up session,
+                    ensuring participants are physically prepared for the upcoming program sections.</p>
+            </div>
+            <div class="mt-20 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-5 ">
+                <div class=" bg-[linear-gradient(380deg,rgba(0,0.2,0,0.4),rgba(0,0,0,0.6)),url(./images/2.png)] lg:h-[400px] col-span-1 bg-cover px-9 flex flex-col justify-center rounded-xl space-y-4">
+                    <div class="space-y-3 my-5">
+                        <h1 class=" text-3xl font-extrabold text-[#fff]">Junior Program</h1>
+                        <p class="text-base font-medium text-[#fff]">he junior program focuses on building a strong
+                            foundation by introducin participants to the fundamental skills and principles of the
+                            activity.</p>
+                        <button class="btn btn-primary bg-text-primary text-[#fff]">Register Now!</button>
+                    </div>
+                </div>
+                <div class=" bg-[linear-gradient(380deg,rgba(0,0.2,0,0.4),rgba(0,0,0,0.6)),url(./images/3.png)] lg:h-[400px] col-span-1 bg-cover px-9 flex flex-col justify-center rounded-xl space-y-4">
+                    <div class="space-y-3 my-5">
+                        <h1 class=" text-3xl font-extrabold text-[#fff]">Teenager Program</h1>
+                        <p class="text-base font-medium text-[#fff]">Tailored for teenagers, this program focuses on
+                            refining existing skills and introducing more advanced techniques.</p>
+                        <button class="btn btn-primary bg-text-primary text-[#fff]">Register Now!</button>
+                    </div>
+                </div>
+                <div class=" bg-[linear-gradient(380deg,rgba(0,0.2,0,0.4),rgba(0,0,0,0.6)),url(./images/4.png)] lg:h-[400px] col-span-1 md:col-span-2 lg:col-span-2 bg-cover px-9 flex flex-col justify-center rounded-xl space-y-4">
+                    <div class="space-y-3 w-3/4 my-5">
+                        <h1 class="text-3xl font-extrabold text-[#fff] ">Professional Program</h1>
+                        <p class="text-base font-medium text-[#fff]">This program focuses on honing and fine-tuning
+                            advanced skills. Specialized coaching and training
+                            methodologies are employed to ensure continual improvement.</p>
+                        <button class="btn btn-primary bg-text-primary text-[#fff]">Register Now!</button>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+
     </main>
     <footer>
 
@@ -157,3 +195,6 @@
 </body>
 
 </html>
+
+
+
