added products section

--- a/index.html
+++ b/index.html
@@ -158,7 +158,8 @@
                     ensuring participants are physically prepared for the upcoming program sections.</p>
             </div>
             <div class="mt-20 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-5 ">
-                <div class=" bg-[linear-gradient(380deg,rgba(0,0.2,0,0.4),rgba(0,0,0,0.6)),url(./images/2.png)] lg:h-[400px] col-span-1 bg-cover px-9 flex flex-col justify-center rounded-xl space-y-4">
+                <div
+                    class=" bg-[linear-gradient(380deg,rgba(0,0.2,0,0.4),rgba(0,0,0,0.6)),url(./images/2.png)] lg:h-[400px] col-span-1 bg-cover px-9 flex flex-col justify-center rounded-xl space-y-4">
                     <div class="space-y-3 my-5">
                         <h1 class=" text-3xl font-extrabold text-[#fff]">Junior Program</h1>
                         <p class="text-base font-medium text-[#fff]">he junior program focuses on building a strong
@@ -167,7 +168,8 @@
                         <button class="btn btn-primary bg-text-primary text-[#fff]">Register Now!</button>
                     </div>
                 </div>
-                <div class=" bg-[linear-gradient(380deg,rgba(0,0.2,0,0.4),rgba(0,0,0,0.6)),url(./images/3.png)] lg:h-[400px] col-span-1 bg-cover px-9 flex flex-col justify-center rounded-xl space-y-4">
+                <div
+                    class=" bg-[linear-gradient(380deg,rgba(0,0.2,0,0.4),rgba(0,0,0,0.6)),url(./images/3.png)] lg:h-[400px] col-span-1 bg-cover px-9 flex flex-col justify-center rounded-xl space-y-4">
                     <div class="space-y-3 my-5">
                         <h1 class=" text-3xl font-extrabold text-[#fff]">Teenager Program</h1>
                         <p class="text-base font-medium text-[#fff]">Tailored for teenagers, this program focuses on
@@ -175,7 +177,8 @@
                         <button class="btn btn-primary bg-text-primary text-[#fff]">Register Now!</button>
                     </div>
                 </div>
-                <div class=" bg-[linear-gradient(380deg,rgba(0,0.2,0,0.4),rgba(0,0,0,0.6)),url(./images/4.png)] lg:h-[400px] col-span-1 md:col-span-2 lg:col-span-2 bg-cover px-9 flex flex-col justify-center rounded-xl space-y-4">
+                <div
+                    class=" bg-[linear-gradient(380deg,rgba(0,0.2,0,0.4),rgba(0,0,0,0.6)),url(./images/4.png)] lg:h-[400px] col-span-1 md:col-span-2 lg:col-span-2 bg-cover px-9 flex flex-col justify-center rounded-xl space-y-4">
                     <div class="space-y-3 w-3/4 my-5">
                         <h1 class="text-3xl font-extrabold text-[#fff] ">Professional Program</h1>
                         <p class="text-base font-medium text-[#fff]">This program focuses on honing and fine-tuning
@@ -187,6 +190,208 @@
 
             </div>
         </section>
+        <section class="mt-20 mx-5">
+            <div class="text-center space-y-4 mx-3 lg:mx-10">
+                <h3 class="text-4xl font-extrabold text-[#131318]">Our New Products</h3>
+                <p class="text-base font-medium text-[#13131899]">Explore our latest line of cutting-edge tech gadgets
+                    designed to enhance your daily life. From smart home devices to wearable tech, experience the future
+                    with seamless connectivity and advanced features.</p>
+            </div>
+            <div class="mt-10 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-5">
+                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-5 border border-[#1313181A] rounded-xl p-5">
+                    <div>
+                        <img src="Images/5.png" alt="">
+                    </div>
+                    <div class="">
+                        <div class="flex gap-4 items-center">
+                            <div class="flex gap-1">
+                                <i class="fa-solid fa-star text-text-primary"></i>
+                                <p>5.0</p>
+                            </div>
+                            <div class="flex gap-1 items-center">
+                                <i class="fa-regular fa-eye"></i>
+                                <p>20</p>
+                            </div>
+                            <div class="flex gap-1 items-center">
+                                <i class="fa-regular fa-heart"></i>
+                                <p>200</p>
+                            </div>
+                        </div>
+                        <div>
+                            <h3 class="text-xl font-extrabold text-[#131318]">World Cup Flags Football</h3>
+                            <p class="text-base font-medium text-[#13131899]">Celebrate the global spectacle with our collector's edition World Cup Flags Footballs.</p>
+                        </div>
+                        <div class="flex gap-4">
+                            <h4 class="text-[#FF4240] text-lg font-extrabold">Price - $22.00</h4>
+                            <div class="flex gap-2 items-center">
+                                <i class="fa-solid fa-cart-shopping"></i>
+                                <p class="text-base font-medium text-[#13131880]">Delivery Fee : Free</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-4 border border-[#1313181A] rounded-xl p-5">
+                    <div>
+                        <img src="Images/6.png" alt="">
+                    </div>
+                    <div class="">
+                        <div class="flex gap-4 items-center">
+                            <div class="flex gap-1">
+                                <i class="fa-solid fa-star text-text-primary"></i>
+                                <p>5.0</p>
+                            </div>
+                            <div class="flex gap-1 items-center">
+                                <i class="fa-regular fa-eye"></i>
+                                <p>20</p>
+                            </div>
+                            <div class="flex gap-1 items-center">
+                                <i class="fa-regular fa-heart"></i>
+                                <p>200</p>
+                            </div>
+                        </div>
+                        <div>
+                            <h3 class="text-xl font-extrabold text-[#131318]">World Cup Flags Football</h3>
+                            <p class="text-base font-medium text-[#13131899]">Celebrate the global spectacle with our collector's edition World Cup Flags Footballs.</p>
+                        </div>
+                        <div class="flex gap-4">
+                            <h4 class="text-[#FF4240] text-lg font-extrabold">Price - $22.00</h4>
+                            <div class="flex gap-2 items-center">
+                                <i class="fa-solid fa-cart-shopping"></i>
+                                <p class="text-base font-medium text-[#13131880]">Delivery Fee : Free</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-4 border border-[#1313181A] rounded-xl p-5">
+                    <div>
+                        <img src="Images/7.png" alt="">
+                    </div>
+                    <div class="">
+                        <div class="flex gap-4 items-center">
+                            <div class="flex gap-1">
+                                <i class="fa-solid fa-star text-text-primary"></i>
+                                <p>5.0</p>
+                            </div>
+                            <div class="flex gap-1 items-center">
+                                <i class="fa-regular fa-eye"></i>
+                                <p>20</p>
+                            </div>
+                            <div class="flex gap-1 items-center">
+                                <i class="fa-regular fa-heart"></i>
+                                <p>200</p>
+                            </div>
+                        </div>
+                        <div>
+                            <h3 class="text-xl font-extrabold text-[#131318]">Cap For Hockeys</h3>
+                            <p class="text-base font-medium text-[#13131899]">Celebrate the global spectacle with our collector's edition World Cup Flags Footballs.</p>
+                        </div>
+                        <div class="flex gap-4">
+                            <h4 class="text-[#FF4240] text-lg font-extrabold">Price - $22.00</h4>
+                            <div class="flex gap-2 items-center">
+                                <i class="fa-solid fa-cart-shopping"></i>
+                                <p class="text-base font-medium text-[#13131880]">Delivery Fee : Free</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-4 border border-[#1313181A] rounded-xl p-5">
+                    <div>
+                        <img src="Images/8.png" alt="">
+                    </div>
+                    <div class="">
+                        <div class="flex gap-4 items-center">
+                            <div class="flex gap-1">
+                                <i class="fa-solid fa-star text-text-primary"></i>
+                                <p>5.0</p>
+                            </div>
+                            <div class="flex gap-1 items-center">
+                                <i class="fa-regular fa-eye"></i>
+                                <p>20</p>
+                            </div>
+                            <div class="flex gap-1 items-center">
+                                <i class="fa-regular fa-heart"></i>
+                                <p>200</p>
+                            </div>
+                        </div>
+                        <div>
+                            <h3 class="text-xl font-extrabold text-[#131318]">World Cup Flags Football</h3>
+                            <p class="text-base font-medium text-[#13131899]">Celebrate the global spectacle with our collector's edition World Cup Flags Footballs.</p>
+                        </div>
+                        <div class="flex gap-4">
+                            <h4 class="text-[#FF4240] text-lg font-extrabold">Price - $22.00</h4>
+                            <div class="flex gap-2 items-center">
+                                <i class="fa-solid fa-cart-shopping"></i>
+                                <p class="text-base font-medium text-[#13131880]">Delivery Fee : Free</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-4 border border-[#1313181A] rounded-xl p-5">
+                    <div>
+                        <img src="Images/9.png" alt="">
+                    </div>
+                    <div class="">
+                        <div class="flex gap-4 items-center">
+                            <div class="flex gap-1">
+                                <i class="fa-solid fa-star text-text-primary"></i>
+                                <p>5.0</p>
+                            </div>
+                            <div class="flex gap-1 items-center">
+                                <i class="fa-regular fa-eye"></i>
+                                <p>20</p>
+                            </div>
+                            <div class="flex gap-1 items-center">
+                                <i class="fa-regular fa-heart"></i>
+                                <p>200</p>
+                            </div>
+                        </div>
+                        <div>
+                            <h3 class="text-xl font-extrabold text-[#131318]">World Cup Flags Football</h3>
+                            <p class="text-base font-medium text-[#13131899]">Celebrate the global spectacle with our collector's edition World Cup Flags Footballs.</p>
+                        </div>
+                        <div class="flex gap-4">
+                            <h4 class="text-[#FF4240] text-lg font-extrabold">Price - $22.00</h4>
+                            <div class="flex gap-2 items-center">
+                                <i class="fa-solid fa-cart-shopping"></i>
+                                <p class="text-base font-medium text-[#13131880]">Delivery Fee : Free</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-4 border border-[#1313181A] rounded-xl p-5">
+                    <div>
+                        <img src="Images/10.png" alt="">
+                    </div>
+                    <div class="">
+                        <div class="flex gap-4 items-center">
+                            <div class="flex gap-1">
+                                <i class="fa-solid fa-star text-text-primary"></i>
+                                <p>5.0</p>
+                            </div>
+                            <div class="flex gap-1 items-center">
+                                <i class="fa-regular fa-eye"></i>
+                                <p>20</p>
+                            </div>
+                            <div class="flex gap-1 items-center">
+                                <i class="fa-regular fa-heart"></i>
+                                <p>200</p>
+                            </div>
+                        </div>
+                        <div>
+                            <h3 class="text-xl font-extrabold text-[#131318]">World Cup Flags Football</h3>
+                            <p class="text-base font-medium text-[#13131899]">Celebrate the global spectacle with our collector's edition World Cup Flags Footballs.</p>
+                        </div>
+                        <div class="flex gap-4">
+                            <h4 class="text-[#FF4240] text-lg font-extrabold">Price - $22.00</h4>
+                            <div class="flex gap-2 items-center">
+                                <i class="fa-solid fa-cart-shopping"></i>
+                                <p class="text-base font-medium text-[#13131880]">Delivery Fee : Free</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
     </main>
     <footer>
@@ -195,6 +400,3 @@
 </body>
 
 </html>
-
-
-
