added a producted section

--- a/index.html
+++ b/index.html
@@ -197,12 +197,17 @@
                     designed to enhance your daily life. From smart home devices to wearable tech, experience the future
                     with seamless connectivity and advanced features.</p>
             </div>
+
+
             <div class="mt-10 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-5">
+
+
+
                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-5 border border-[#1313181A] rounded-xl p-5">
                     <div>
-                        <img src="Images/5.png" alt="">
+                        <img class="w-full" src="Images/5.png" alt="">
                     </div>
-                    <div class="">
+                    <div class="space-y-6 my-auto">
                         <div class="flex gap-4 items-center">
                             <div class="flex gap-1">
                                 <i class="fa-solid fa-star text-text-primary"></i>
@@ -230,11 +235,18 @@
                         </div>
                     </div>
                 </div>
+
+
+
+
+
+
+
                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-4 border border-[#1313181A] rounded-xl p-5">
                     <div>
-                        <img src="Images/6.png" alt="">
+                        <img class="w-full" src="Images/6.png" alt="">
                     </div>
-                    <div class="">
+                    <div class="space-y-6 my-auto">
                         <div class="flex gap-4 items-center">
                             <div class="flex gap-1">
                                 <i class="fa-solid fa-star text-text-primary"></i>
@@ -262,11 +274,14 @@
                         </div>
                     </div>
                 </div>
+
+
+
                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-4 border border-[#1313181A] rounded-xl p-5">
                     <div>
-                        <img src="Images/7.png" alt="">
+                        <img class="w-full" src="Images/7.png" alt="">
                     </div>
-                    <div class="">
+                    <div class="space-y-6 my-auto">
                         <div class="flex gap-4 items-center">
                             <div class="flex gap-1">
                                 <i class="fa-solid fa-star text-text-primary"></i>
@@ -296,9 +311,9 @@
                 </div>
                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-4 border border-[#1313181A] rounded-xl p-5">
                     <div>
-                        <img src="Images/8.png" alt="">
+                        <img class="w-full" src="Images/8.png" alt="">
                     </div>
-                    <div class="">
+                    <div class=" space-y-6 my-auto">
                         <div class="flex gap-4 items-center">
                             <div class="flex gap-1">
                                 <i class="fa-solid fa-star text-text-primary"></i>
@@ -328,9 +343,9 @@
                 </div>
                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-4 border border-[#1313181A] rounded-xl p-5">
                     <div>
-                        <img src="Images/9.png" alt="">
+                        <img class="w-full" src="Images/9.png" alt="">
                     </div>
-                    <div class="">
+                    <div class="space-y-6 my-auto">
                         <div class="flex gap-4 items-center">
                             <div class="flex gap-1">
                                 <i class="fa-solid fa-star text-text-primary"></i>
@@ -360,9 +375,9 @@
                 </div>
                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-4 border border-[#1313181A] rounded-xl p-5">
                     <div>
-                        <img src="Images/10.png" alt="">
+                        <img class="w-full" src="Images/10.png" alt="">
                     </div>
-                    <div class="">
+                    <div class="space-y-6 my-auto">
                         <div class="flex gap-4 items-center">
                             <div class="flex gap-1">
                                 <i class="fa-solid fa-star text-text-primary"></i>
