added clients question section

--- a/index.html
+++ b/index.html
@@ -197,13 +197,9 @@
                     designed to enhance your daily life. From smart home devices to wearable tech, experience the future
                     with seamless connectivity and advanced features.</p>
             </div>
-
-
             <div class="mt-10 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-5">
-
-
-
-                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-5 border border-[#1313181A] rounded-xl p-5">
+                <div
+                    class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-5 border border-[#1313181A] rounded-xl p-5">
                     <div>
                         <img class="w-full" src="Images/5.png" alt="">
                     </div>
@@ -224,7 +220,8 @@
                         </div>
                         <div>
                             <h3 class="text-xl font-extrabold text-[#131318]">World Cup Flags Football</h3>
-                            <p class="text-base font-medium text-[#13131899]">Celebrate the global spectacle with our collector's edition World Cup Flags Footballs.</p>
+                            <p class="text-base font-medium text-[#13131899]">Celebrate the global spectacle with our
+                                collector's edition World Cup Flags Footballs.</p>
                         </div>
                         <div class="flex gap-4">
                             <h4 class="text-[#FF4240] text-lg font-extrabold">Price - $22.00</h4>
@@ -235,14 +232,8 @@
                         </div>
                     </div>
                 </div>
-
-
-
-
-
-
-
-                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-4 border border-[#1313181A] rounded-xl p-5">
+                <div
+                    class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-4 border border-[#1313181A] rounded-xl p-5">
                     <div>
                         <img class="w-full" src="Images/6.png" alt="">
                     </div>
@@ -263,7 +254,8 @@
                         </div>
                         <div>
                             <h3 class="text-xl font-extrabold text-[#131318]">World Cup Flags Football</h3>
-                            <p class="text-base font-medium text-[#13131899]">Celebrate the global spectacle with our collector's edition World Cup Flags Footballs.</p>
+                            <p class="text-base font-medium text-[#13131899]">Celebrate the global spectacle with our
+                                collector's edition World Cup Flags Footballs.</p>
                         </div>
                         <div class="flex gap-4">
                             <h4 class="text-[#FF4240] text-lg font-extrabold">Price - $22.00</h4>
@@ -274,10 +266,8 @@
                         </div>
                     </div>
                 </div>
-
-
-
-                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-4 border border-[#1313181A] rounded-xl p-5">
+                <div
+                    class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-4 border border-[#1313181A] rounded-xl p-5">
                     <div>
                         <img class="w-full" src="Images/7.png" alt="">
                     </div>
@@ -298,7 +288,8 @@
                         </div>
                         <div>
                             <h3 class="text-xl font-extrabold text-[#131318]">Cap For Hockeys</h3>
-                            <p class="text-base font-medium text-[#13131899]">Celebrate the global spectacle with our collector's edition World Cup Flags Footballs.</p>
+                            <p class="text-base font-medium text-[#13131899]">Celebrate the global spectacle with our
+                                collector's edition World Cup Flags Footballs.</p>
                         </div>
                         <div class="flex gap-4">
                             <h4 class="text-[#FF4240] text-lg font-extrabold">Price - $22.00</h4>
@@ -309,7 +300,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-4 border border-[#1313181A] rounded-xl p-5">
+                <div
+                    class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-4 border border-[#1313181A] rounded-xl p-5">
                     <div>
                         <img class="w-full" src="Images/8.png" alt="">
                     </div>
@@ -330,7 +322,8 @@
                         </div>
                         <div>
                             <h3 class="text-xl font-extrabold text-[#131318]">World Cup Flags Football</h3>
-                            <p class="text-base font-medium text-[#13131899]">Celebrate the global spectacle with our collector's edition World Cup Flags Footballs.</p>
+                            <p class="text-base font-medium text-[#13131899]">Celebrate the global spectacle with our
+                                collector's edition World Cup Flags Footballs.</p>
                         </div>
                         <div class="flex gap-4">
                             <h4 class="text-[#FF4240] text-lg font-extrabold">Price - $22.00</h4>
@@ -341,7 +334,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-4 border border-[#1313181A] rounded-xl p-5">
+                <div
+                    class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-4 border border-[#1313181A] rounded-xl p-5">
                     <div>
                         <img class="w-full" src="Images/9.png" alt="">
                     </div>
@@ -362,7 +356,8 @@
                         </div>
                         <div>
                             <h3 class="text-xl font-extrabold text-[#131318]">World Cup Flags Football</h3>
-                            <p class="text-base font-medium text-[#13131899]">Celebrate the global spectacle with our collector's edition World Cup Flags Footballs.</p>
+                            <p class="text-base font-medium text-[#13131899]">Celebrate the global spectacle with our
+                                collector's edition World Cup Flags Footballs.</p>
                         </div>
                         <div class="flex gap-4">
                             <h4 class="text-[#FF4240] text-lg font-extrabold">Price - $22.00</h4>
@@ -373,7 +368,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-4 border border-[#1313181A] rounded-xl p-5">
+                <div
+                    class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-4 border border-[#1313181A] rounded-xl p-5">
                     <div>
                         <img class="w-full" src="Images/10.png" alt="">
                     </div>
@@ -394,7 +390,8 @@
                         </div>
                         <div>
                             <h3 class="text-xl font-extrabold text-[#131318]">World Cup Flags Football</h3>
-                            <p class="text-base font-medium text-[#13131899]">Celebrate the global spectacle with our collector's edition World Cup Flags Footballs.</p>
+                            <p class="text-base font-medium text-[#13131899]">Celebrate the global spectacle with our
+                                collector's edition World Cup Flags Footballs.</p>
                         </div>
                         <div class="flex gap-4">
                             <h4 class="text-[#FF4240] text-lg font-extrabold">Price - $22.00</h4>
@@ -407,7 +404,81 @@
                 </div>
             </div>
         </section>
+        <section class="mt-20 mx-5">
+            <div class="text-center space-y-4 mx-3 lg:mx-10">
+                <h3 class="text-4xl font-extrabold text-[#131318]">Clients Question</h3>
+                <p class="text-base font-medium text-[#13131899]">Address your clients' questions with clarity and professionalism. Offer concise and informative responses to ensure their satisfaction and understanding of your products or services.</p>
+            </div>
+            <div class="flex flex-col lg:flex-row gap-5 mt-16">
+                <div>
+                    <img src="Images/11.png" alt="">
+                </div>
+              
+                <div class="flex-1 space-y-2">
+                    <div class="collapse collapse-plus  ">
+                        <input type="radio" name="my-accordion-3" checked="checked" /> 
+                        <div class="collapse-title text-xl font-medium">
+                            Ski Touring
+                        </div>
+                        <div class="collapse-content"> 
+                          <p>Address your clients' questions with clarity and professionalism. Offer concise and informative responses to ensure their satisfaction and understanding of your products or services</p>
+                        </div>
+                      </div>
+                      <hr>
+                      <div class="collapse collapse-plus ">
+                        <input type="radio" name="my-accordion-3" /> 
+                        <div class="collapse-title text-xl font-medium">
+                            Booking
+                        </div>
+                        <div class="collapse-content"> 
+                          <p>Address your clients' questions with clarity and professionalism. Offer concise and informative responses to ensure their satisfaction and understanding of your products or services</p>
+                        </div>
+                      </div>
+                      <hr>
+                      <div class="collapse collapse-plus  ">
+                        <input type="radio" name="my-accordion-3" /> 
+                        <div class="collapse-title text-xl font-medium">
+                            Pricings
+                        </div>
+                        <div class="collapse-content"> 
+                          <p>Address your clients' questions with clarity and professionalism. Offer concise and informative responses to ensure their satisfaction and understanding of your products or services</p>
+                        </div>
+                      </div>
+                      <hr>
+                      <div class="collapse collapse-plus  ">
+                        <input type="radio" name="my-accordion-3" /> 
+                        <div class="collapse-title text-xl font-medium">
+                            Pricings
+                        </div>
+                        <div class="collapse-content"> 
+                          <p>Address your clients' questions with clarity and professionalism. Offer concise and informative responses to ensure their satisfaction and understanding .</p>
+                        </div>
+                      </div>
+                      <hr>
+                      <div class="collapse collapse-plus  ">
+                        <input type="radio" name="my-accordion-3" /> 
+                        <div class="collapse-title text-xl font-medium">
+                            Pricings
+                        </div>
+                        <div class="collapse-content"> 
+                          <p>Address your clients' questions with clarity and professionalism. Offer concise and informative responses to ensure their satisfaction and understanding of your products or services</p>
+                        </div>
+                      </div>
+                      <div class="collapse collapse-plus  ">
+                        <input type="radio" name="my-accordion-3" /> 
+                        <div class="collapse-title text-xl font-medium">
+                            Pricings
+                        </div>
+                        <div class="collapse-content"> 
+                          <p>Address your clients' questions with clarity and professionalism. Offer concise and informative responses to ensure their satisfaction and understanding.</p>
+                        </div>
+                      </div>
+                      <hr>
+                      
+                </div>
 
+            </div>
+        </section>
     </main>
     <footer>
 
